--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.8.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
@@ -44,5 +47,8 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
     "msw": "^1.1.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
